Test/Sema/Bad/bad_class_attr_type.py
# RUN: %chocopy-llvm --run-sema %s 2>&1 | FileCheck %s.err

class A(object):
    x:int = True

A()
