Test/Sema/Bad/bad_class_attr_type.py.err
CHECK: bad_class_attr_type.py:4:5: error: Expected type `int`; got type `bool`
CHECK-NEXT: x:int = True
CHECK: 1 error generated!
